Extend boolean attribute test

--- a/test/attributes/boolean-attributes/formatted.pug
+++ b/test/attributes/boolean-attributes/formatted.pug
@@ -8,3 +8,6 @@ input(type="checkbox", checked=false)
 |
 |
 input(type="checkbox", checked=true.toString())
+|
+|
+input(type="checkbox", checked=true && 'checked')
