Handle id literals

--- a/test/literals/id-literals/unformatted.pug
+++ b/test/literals/id-literals/unformatted.pug
@@ -1,3 +1,8 @@
 a#main-link
 #content
 div#content
+
+span.testclass(id="testid")
+span#testid.testclass
+span.testclass#testid
+span.testclass#testid(class="testclass2")
