--- a/test/literals/id-literals/formatted.pug
+++ b/test/literals/id-literals/formatted.pug
@@ -1,3 +1,8 @@
 a#main-link
 #content
 #content
+
+span#testid.testclass
+span#testid.testclass
+span#testid.testclass
+span#testid.testclass.testclass2
