Fix incorrect handling of id attribute

--- a/test/literals/id-literals/formatted.pug
+++ b/test/literals/id-literals/formatted.pug
@@ -6,3 +6,5 @@ span#testid.testclass
 span#testid.testclass
 span#testid.testclass
 span#testid.testclass.testclass2
+
+v-text-field#search(:label="$t('search.label')", prepend-inner-icon="search", v-model="search", single-line)
