--- a/test/literals/id-literals/unformatted.pug
+++ b/test/literals/id-literals/unformatted.pug
@@ -6,3 +6,5 @@ span.testclass(id="testid")
 span#testid.testclass
 span.testclass#testid
 span.testclass#testid(class="testclass2")
+
+v-text-field(:label="$t('search.label')", id="search", prepend-inner-icon="search", v-model="search", single-line)
