--- a/test/spaces/formatted.pug
+++ b/test/spaces/formatted.pug
@@ -1,2 +1,7 @@
 //- template.pug
 p #{name}'s Pug source code!
+
+v-btn(color="primary", name="save", @click="save", :disabled="saving", :loading="saving")
+  v-icon save
+  |
+  | {{ $t('mylangkeys.crud.save') }}
