--- a/test/spaces/unformatted.pug
+++ b/test/spaces/unformatted.pug
@@ -1,2 +1,6 @@
 //- template.pug
 p     #{name}'s   Pug     source   code!
+
+v-btn(color="primary", name="save", @click="save", :disabled="saving", :loading="saving")
+  v-icon save
+  |  {{ $t('mylangkeys.crud.save') }}
