Fix indentation of piped text

--- a/test/indents/formatted-4-spaces.pug
+++ b/test/indents/formatted-4-spaces.pug
@@ -26,3 +26,11 @@ html
 
                     #use-of-id(test)
                         span Hello
+
+        p text text
+            |
+            | text
+
+        p text text
+        |
+        | text
