--- a/test/indents/unformatted.pug
+++ b/test/indents/unformatted.pug
@@ -27,3 +27,11 @@ html
 
             #use-of-id(test)
                 span Hello
+
+       p text text
+         |
+         | text
+
+       p text text
+       |
+       | text
