Add test for indented comments

--- a/test/comments/formatted.pug
+++ b/test/comments/formatted.pug
@@ -11,3 +11,11 @@ div
   //
     Comments for your HTML readers.
     Use as much text as you want.
+div
+  //- Indented comment
+  span Test
+    // Indented comment
+    span Test
+
+  //- Indented comment
+  span Test
