--- a/test/comments/unformatted.pug
+++ b/test/comments/unformatted.pug
@@ -11,3 +11,13 @@ div
   //
     Comments for   your HTML readers.
     Use as   much text as you want.
+div
+  //- Indented comment
+  span Test
+    // Indented comment
+    span Test
+
+
+
+  //- Indented comment
+  span Test
