--- a/test/mixins/formatted.pug
+++ b/test/mixins/formatted.pug
@@ -35,6 +35,6 @@ mixin list
 
 mixin link(href, name)
   //- attributes == {class: "btn"}
-  a(class!=attributes.class href=href)= name
+  a(class!=attributes.class, href=href)= name
 
 +link('/foo', 'foo')(class="btn")
