Use correct format for class in test

--- a/test/mixins/formatted.pug
+++ b/test/mixins/formatted.pug
@@ -37,4 +37,4 @@ mixin link(href, name)
   //- attributes == {class: "btn"}
   a(class!=attributes.class, href=href)= name
 
-+link('/foo', 'foo')(class="btn")
++link('/foo', 'foo').btn
