--- a/test/issues/issue-9/unformatted.pug
+++ b/test/issues/issue-9/unformatted.pug
@@ -2,4 +2,7 @@
   | {{'hello world' | uppercase}}
 
 .with-apostrophe(foo="{{'it\'s me' | uppercase}}")
-  | {{"it's me" | uppercase}}
+  | {{"it's me"   | uppercase}}
+
+.very-special-case
+  | {{ `"${ `Jean ${ '"John"' } d'Arc`.toUpperCase() }"` }}
