--- a/test/mixins/unformatted.pug
+++ b/test/mixins/unformatted.pug
@@ -38,3 +38,8 @@ mixin link(href,  name)
   a(class!=attributes.class href=href)= name
 
 +link('/foo', 'foo')(class="btn")
+
+mixin link2(href, name)
+  a(href=href)&attributes(attributes)= name
+
++link2('/foo', 'foo')(class="btn")
