--- a/test/options/attributeSeparator/as-needed/formatted.pug
+++ b/test/options/attributeSeparator/as-needed/formatted.pug
@@ -10,7 +10,7 @@ mixin anchor({ href, isExternal })
     if block
       block
 
-+anchor({ href: "contact/" }).extra-class(data-popup)
++anchor({ href: "contact/" }).extra-class(data-popup="true")
 
 .wrapper(
   data-nav
