--- a/test/interpolations/formatted.pug
+++ b/test/interpolations/formatted.pug
@@ -7,3 +7,18 @@ p {{ test
 p {{ test }} {{
 p {{ test some text
 p {{ test }} {{ some text
+
+//- Angular
+p {{ title }}
+div
+  img(src="{{ itemImageUrl }}")
+
+// "The sum of 1 + 1 is not 4"
+p The sum of 1 + 1 is not {{ 1 + 1 + getVal() }}.
+
+h4 {{ recommended }}
+img([src]="itemImageUrl2")
+
+button((click)="onSave($event)") Save
+button(*ngfor="let hero of heroes", (click)="deleteHero(hero)") {{ hero.name }}
+form(#heroform="", (ngsubmit)="onSubmit(heroForm)") ...
