--- a/test/interpolations/unformatted.pug
+++ b/test/interpolations/unformatted.pug
@@ -22,3 +22,6 @@ img( [src]="  itemImageUrl2")
 button((click)='onSave( $event  )  ') Save
 button(*ngfor='let hero  of  heroes', (click)='  deleteHero(  hero)') {{hero.name}}
 form(#heroform='', (ngsubmit)=' onSubmit(  heroForm)') ...
+
+//- Vue
+button(@click.native="x = true")
