--- a/test/options/sortAttributes/default/formatted.pug
+++ b/test/options/sortAttributes/default/formatted.pug
@@ -1,2 +1,3 @@
 span.a.b(style="background: #000")
 img(src="logo.png", alt="Logo")
+div(:key="value.key", @click="doSomething(value)", v-for="value in values")
