Transform singleline text-html to pug

--- a/test/text-html/formatted.pug
+++ b/test/text-html/formatted.pug
@@ -1,17 +1,17 @@
-<!DOCTYPE html>
+doctype html
 <html>
 
 body
   p Indenting the body tag here would make no difference.
-  <p>HTML itself isn't whitespace-sensitive.</p>
+  p HTML itself isn't whitespace-sensitive.
   ul
     li Item A
     li Item B
     li Item C
   <ul>
-    <li>Item A</li>
+    li Item A
     li Item B
-    <li>Item C</li>
+    li Item C
   </ul>
 
 </html>
