Apply semicolons correctly

--- a/test/issues/issue-34/formatted.pug
+++ b/test/issues/issue-34/formatted.pug
@@ -3,7 +3,7 @@ ul
   while n < 4
     li= n++
 
-- var friends = 1
+- var friends = 1;
 case friends
   when 0: p you have no friends
   when 1: p you have a friend
