--- a/test/literals/class-literals/formatted.pug
+++ b/test/literals/class-literals/formatted.pug
@@ -28,7 +28,7 @@ div
   :but="withCode()",
   class="#ad"
 )
-- const classes = ['foo', 'bar', 'baz']
+- const classes = ['foo', 'bar', 'baz'];
 a.bing.fizz(class=classes)
 a.bang.fizz.bib(class=classes, class=['bing'])
 
