--- a/test/issues/issue-38/formatted.pug
+++ b/test/issues/issue-38/formatted.pug
@@ -1,5 +1,5 @@
-- var user = { description: 'foo bar baz' }
-- var authorised = false
+- var user = { description: 'foo bar baz' };
+- var authorised = false;
 #user
   if user.description
     h2.green Description
