Format code attributes

--- a/test/options/attributeSeparator/as-needed/formatted.pug
+++ b/test/options/attributeSeparator/as-needed/formatted.pug
@@ -17,6 +17,6 @@ mixin anchor({ href, isExternal })
   data-next="Next"
   data-prev="Prev"
   data-slides=4
-  data-arr=[1,2,3,4,5,6]
-  data-obj={att: 1, attr2: 2}
+  data-arr=[1, 2, 3, 4, 5, 6]
+  data-obj={ att: 1, attr2: 2 }
 )
