--- a/test/mixins/unformatted.pug
+++ b/test/mixins/unformatted.pug
@@ -6,7 +6,11 @@ mixin list
     li baz
 //- Use
 +list
-+list
++list()
++list(class="btn")
++list()(class="btn")
++list(test="test")
++list()(test="test")
 
 .container
   .for
