Improve test for commentPreserveSpaces

--- a/test/options/commentPreserveSpaces/trim-all/unformatted.pug
+++ b/test/options/commentPreserveSpaces/trim-all/unformatted.pug
@@ -1,7 +1,11 @@
 //   just   some   paragraphs
+//just   some   paragraphs 
+//just   some   paragraphs  
 p foo
 p bar
   //- will   not  output  within markup
+  //-will   not  output  within markup 
+  //-will   not  output  within markup  
   p foo
   p bar
 div
@@ -11,6 +15,8 @@ div
   //
     Comments for   your HTML readers.
       Use as   much text as you want.
+      Use as   much text as you want. 
+      Use as   much text as you want.  
 div
   //- Indented comment
   span Test
