--- a/test/options/commentPreserveSpaces/keep-leading/unformatted.pug
+++ b/test/options/commentPreserveSpaces/keep-leading/unformatted.pug
@@ -1,7 +1,13 @@
 //   just   some   paragraphs
+//just some paragraphs
+//just some paragraphs 
+//just some paragraphs  
 p foo
 p bar
   //-   will   not  output  within markup
+  //-will   not  output  within markup
+  //-will   not  output  within markup 
+  //-will   not  output  within markup  
   p foo
   p bar
 div
@@ -11,6 +17,7 @@ div
   //
     Comments for   your HTML readers.
       Use as   much text as you want.
+      Use as   much text as you want. 
 div
   //- Indented comment
   span Test
