--- a/test/options/commentPreserveSpaces/trim-all/formatted.pug
+++ b/test/options/commentPreserveSpaces/trim-all/formatted.pug
@@ -1,7 +1,11 @@
 // just some paragraphs
+//just some paragraphs
+//just some paragraphs
 p foo
 p bar
   //- will not output within markup
+  //-will not output within markup
+  //-will not output within markup
   p foo
   p bar
 div
@@ -10,6 +14,8 @@ div
     Use as much text as you want.
   //
     Comments for your HTML readers.
+    Use as much text as you want.
+    Use as much text as you want.
     Use as much text as you want.
 div
   //- Indented comment
