--- a/test/options/commentPreserveSpaces/keep-leading/formatted.pug
+++ b/test/options/commentPreserveSpaces/keep-leading/formatted.pug
@@ -1,9 +1,11 @@
 //   just some paragraphs
 //just some paragraphs
 //just some paragraphs
+//just some paragraphs
 p foo
 p bar
   //-   will not output within markup
+  //-will not output within markup
   //-will not output within markup
   //-will not output within markup
   p foo
