--- a/test/issues/issue-45/index.pug
+++ b/test/issues/issue-45/index.pug
@@ -1,12 +1,14 @@
 extends ./layout.pug
 
 block main
-  h2='Hello World'
-  div.lorem
+  h2= 'Hello World'
+  .lorem
     +lorem(4)
-  div.lists
+  .lists
     each index in [1, 2, 3, 4]
-      - const base = index + ((index - 1) * 2)
-      +list([`test ${base}`, `test ${base + 1}`, `test ${base + 2}`])(class=`list--${index}`).list
+      - const base = index + (index - 1) * 2;
+      +list([`test ${base}`, `test ${base + 1}`, `test ${base + 2}`])(
+        class=`list--${index}`
+      ).list
   +b('image', 'div').image--svg
     include ./public/star.svg
