Extend test of issue 61

--- a/test/issues/issue-61/formatted.pug
+++ b/test/issues/issue-61/formatted.pug
@@ -1,9 +1,13 @@
-- const getRepository = () => ({ slug: "slug" })
-- const Nav = { currentProject: () => ({ repo: () => ({ buildNoContext: () => "no-context" }) }) }
-
 div
   table
     tbody
       tr
         td
-          a(:href='Nav.currentProject().repo(getRepository(pipeline).slug).buildNoContext()')
+          //- Vue
+          a(
+            :href='Nav.currentProject().repo(getRepository(pipeline).slug).buildNoContext()'
+          )
+          //- Angular
+          a(
+            [href]='Nav.currentProject().repo(getRepository(pipeline).slug).buildNoContext()'
+          )
