Extend attribute test

--- a/test/attributes/class-attributes/unformatted.pug
+++ b/test/attributes/class-attributes/unformatted.pug
@@ -14,3 +14,13 @@ a(class={active: currentUrl  === '/'}  , href= '/' ) Home
 |
 |
 a(class={ active:  currentUrl === '/about'} href='/about') About
+
+a(href="index.html")#id.class Text
+a(href="index.html").class#id Text
+a(href="index.html")#id Text
+a(href="index.html").class Text
+
+div(id="id") Text
+div(class="class") Text
+#id Text
+.class Text
