--- a/test/attributes/class-attributes/formatted.pug
+++ b/test/attributes/class-attributes/formatted.pug
@@ -14,3 +14,13 @@ a(class={ active: currentUrl === '/' }, href="/") Home
 |
 |
 a(class={ active: currentUrl === '/about' }, href="/about") About
+
+a#id.class(href="index.html") Text
+a#id.class(href="index.html") Text
+a#id(href="index.html") Text
+a.class(href="index.html") Text
+
+#id Text
+.class Text
+#id Text
+.class Text
