Fix class handling

--- a/test/attributes/class-attributes/formatted.pug
+++ b/test/attributes/class-attributes/formatted.pug
@@ -24,3 +24,7 @@ a.class(href="index.html") Text
 .class Text
 #id Text
 .class Text
+.bg-red-100.border-l-4.border-red-600.text-red-700.p-4.mb-4
+.bg-red-100.border-l-4.border-red-600.text-red-700.p-4.mb-4(
+  data-other="other"
+)
