--- a/test/attributes/class-attributes/unformatted.pug
+++ b/test/attributes/class-attributes/unformatted.pug
@@ -24,3 +24,5 @@ div(id="id") Text
 div(class="class") Text
 #id Text
 .class Text
+div(class="bg-red-100 border-l-4 border-red-600 text-red-700 p-4 mb-4")
+div(class="bg-red-100 border-l-4 border-red-600 text-red-700 p-4 mb-4", data-other="other")
