--- a/test/attributes/class-attributes/formatted.pug
+++ b/test/attributes/class-attributes/formatted.pug
@@ -24,7 +24,20 @@ a.class(href="index.html") Text
 .class Text
 #id Text
 .class Text
+
 .bg-red-100.border-l-4.border-red-600.text-red-700.p-4.mb-4
-.bg-red-100.border-l-4.border-red-600.text-red-700.p-4.mb-4(
+.bg-red-100.border-l-4.border-red-600.text-red-700.p-4.mb-4(data-other="other")
+.bg-red-100.border-l-4.border-red-6(data-other="other", data-another="another")
+.bg-red-10.border-l-2.border-red-600.text-red-700.mb-4.rounded-r-10.font-normal
+.bg-red-10.border-l-2.border-red-600.text-red-700.mb-4.rounded-r-10.font-normal(
   data-other="other"
 )
+.bg-red-10.border-l-2.border-red-600.text-red-700.mb-4.rounded-r-10.font-normal.more
+
+.bg-red-100.border-l-4.border-red-600.text-red-700.p-4.mb-4
+.bg-red-100.border-l-4.border-red-600.text-red-700.p-4.mb-4(data-other="other")
+.bg-red-10.border-l-2.border-red-600.text-red-700.mb-4.rounded-r-10.font-normal
+.bg-red-10.border-l-2.border-red-600.text-red-700.mb-4.rounded-r-10.font-normal(
+  data-other="other"
+)
+.bg-red-10.border-l-2.border-red-600.text-red-700.mb-4.rounded-r-10.font-normal.more
