--- a/test/attributes/class-attributes/unformatted.pug
+++ b/test/attributes/class-attributes/unformatted.pug
@@ -24,5 +24,23 @@ div(id="id") Text
 div(class="class") Text
 #id Text
 .class Text
+
 div(class="bg-red-100 border-l-4 border-red-600 text-red-700 p-4 mb-4")
 div(class="bg-red-100 border-l-4 border-red-600 text-red-700 p-4 mb-4", data-other="other")
+div(class="bg-red-100 border-l-4 border-red-6", data-other="other", data-another="another")
+div(class="bg-red-10 border-l-2 border-red-600 text-red-700 mb-4 rounded-r-10 font-normal")
+div(class="bg-red-10 border-l-2 border-red-600 text-red-700 mb-4 rounded-r-10 font-normal", data-other="other")
+div(class="bg-red-10 border-l-2 border-red-600 text-red-700 mb-4 rounded-r-10 font-normal more")
+
+.bg-red-100.border-l-4.border-red-600.text-red-700.p-4.mb-4(
+)
+.bg-red-100.border-l-4.border-red-600.text-red-700.p-4.mb-4(
+  data-other="other"
+)
+.bg-red-10.border-l-2.border-red-600.text-red-700.mb-4.rounded-r-10.font-normal(
+)
+.bg-red-10.border-l-2.border-red-600.text-red-700.mb-4.rounded-r-10.font-normal(
+  data-other="other"
+)
+.bg-red-10.border-l-2.border-red-600.text-red-700.mb-4.rounded-r-10.font-normal.more(
+)
