--- a/test/options/attributeSeparator/always/formatted.pug
+++ b/test/options/attributeSeparator/always/formatted.pug
@@ -1,5 +1,9 @@
 button(type="submit", (click)="play()", disabled)
-hello-framework([name]="name", [version]="version", (release)="onVersionRelease()")
+hello-framework(
+  [name]="name",
+  [version]="version",
+  (release)="onVersionRelease()"
+)
 
 nav-component(locale-relative-redirect="true", highlight="home", pin="false")
 
