Improve accuracy of printWidth

--- a/test/literals/class-literals/formatted.pug
+++ b/test/literals/class-literals/formatted.pug
@@ -39,7 +39,4 @@ v-text-field.search(
   single-line
 )
 
-span#testid.testclass.ab.cd.ef.hi.jk(
-  other="attribute",
-  other2="attribute2"
-)
+span#testid.testclass.ab.cd.ef.hi.jk(other="attribute", other2="attribute2")
