--- a/test/options/closingBracketPosition/last-line/formatted.pug
+++ b/test/options/closingBracketPosition/last-line/formatted.pug
@@ -14,3 +14,12 @@ nav-component(locale-relative-redirect="true", highlight="home", pin="false")
   data-slides=4,
   data-arr=[1, 2, 3, 4, 5, 6],
   data-obj={ att: 1, attr2: 2 })
+
+
+div
+  input(
+    type="text",
+    value="my_value",
+    name="my_name",
+    alt="my_alt",
+    autocomplete="on")
