--- a/test/options/closingBracketPosition/last-line/unformatted.pug
+++ b/test/options/closingBracketPosition/last-line/unformatted.pug
@@ -5,3 +5,12 @@ hello-framework([name]="name", [version]="version", (release)="onVersionRelease(
 nav-component(locale-relative-redirect="true", highlight="home", pin="false")
 
 .wrapper(data-nav=true data-next="Next" data-prev="Prev" data-slides=4 data-arr=[1,2,3,4,5,6] data-obj={att: 1, attr2: 2})
+
+div
+  input(
+    type="text",
+    value="my_value",
+    name="my_name",
+    alt="my_alt",
+    autocomplete="on"
+  )
