nested closed brackets was causing a dash bug

--- a/test/options/closingBracketPosition/last-line/formatted.pug
+++ b/test/options/closingBracketPosition/last-line/formatted.pug
@@ -15,11 +15,16 @@ nav-component(locale-relative-redirect="true", highlight="home", pin="false")
   data-arr=[1, 2, 3, 4, 5, 6],
   data-obj={ att: 1, attr2: 2 })
 
-
 div
-  input(
+  .nested-div-1(
     type="text",
-    value="my_value",
-    name="my_name",
-    alt="my_alt",
+    value="my_value1",
+    name="my_name1",
+    alt="my_alt1",
     autocomplete="on")
+    .nested-div-2(
+      type="text",
+      value="my_value2",
+      name="my_name2",
+      alt="my_alt2",
+      autocomplete="on")
