Update test templates

--- a/test/options/closingBracketPosition/last-line/unformatted.pug
+++ b/test/options/closingBracketPosition/last-line/unformatted.pug
@@ -8,7 +8,7 @@ nav-component(locale-relative-redirect="true", highlight="home", pin="false")
 
 div
   div(
-    class='nested-div-1'
+    class="nested-div-1",
     type="text",
     value="my_value1",
     name="my_name1",
@@ -16,7 +16,7 @@ div
     autocomplete="on"
   )
     div(
-      class='nested-div-2'
+      class="nested-div-2",
       type="text",
       value="my_value2",
       name="my_name2",
