--- a/test/issues/issue-89/unformatted.pug
+++ b/test/issues/issue-89/unformatted.pug
@@ -44,5 +44,7 @@ div
     h1.
       Lorem
     p.
-      Lorem ipsum
-      #[code Lorem ipsum].
+      Lorem1
+      #[code Lorem2].
+      #[code Lorem3].
+      #{Lorem4}
