Fix wrapped attribute multiline code indentation

--- a/tests/issues/issue-110/formatted.pug
+++ b/tests/issues/issue-110/formatted.pug
@@ -8,3 +8,9 @@ div
       a: true,
       b: false,
     })
+    div(
+      class={
+        aaaaaaaaaaaaaaaaaaaaaaaaaaaa: true,
+        bbbbbbbbbbbbbbbbbbbbbbbbbbbb: false,
+      }
+    )
