--- a/tests/options/attributeSeparator/none/formatted.pug
+++ b/tests/options/attributeSeparator/none/formatted.pug
@@ -9,4 +9,6 @@ nav-component(locale-relative-redirect="true" highlight="home" pin="false")
   data-slides=4
   data-arr=[1, 2, 3, 4, 5, 6]
   data-obj={ att: 1, attr2: 2 }
+  :style="style"
+  @click="play()"
 )
