Fix counting of current line-length
So it works correctly with the various settings of attributeSeparator

--- a/tests/options/attributeSeparator/always/formatted.pug
+++ b/tests/options/attributeSeparator/always/formatted.pug
@@ -1,3 +1,10 @@
+.length-test(attributes1="foo", :attribute2="bar", attribute3="filler.........")
+.length-test(
+  attributes1="foo",
+  :attribute2="bar",
+  attribute3="filler.........."
+)
+
 button(type="submit", (click)="play()", disabled)
 hello-framework(
   [name]="name",
