--- a/tests/options/attributeSeparator/none/formatted.pug
+++ b/tests/options/attributeSeparator/none/formatted.pug
@@ -1,3 +1,10 @@
+.length-test(attributes1="foo" :attribute2="bar" attribute3="filler...........")
+.length-test(
+  attributes1="foo"
+  :attribute2="bar"
+  attribute3="filler............"
+)
+
 button(type="submit" :style="style" @click="play()" disabled)
 
 nav-component(locale-relative-redirect="true" highlight="home" pin="false")
