--- a/tests/options/attributeSeparator/as-needed/unformatted.pug
+++ b/tests/options/attributeSeparator/as-needed/unformatted.pug
@@ -1,3 +1,6 @@
+.length-test(attributes1="foo", :attribute2="bar" attribute3="filler..........")
+.length-test(attributes1="foo", :attribute2="bar" attribute3="filler...........")
+
 button(type="submit", (click)="play()", disabled)
 hello-framework([name]="name", [version]="version", (release)="onVersionRelease()")
 
