Add case to test default properties

--- a/tests/options/sortAttributes/formatted.pug
+++ b/tests/options/sortAttributes/formatted.pug
@@ -1,3 +1,4 @@
 span.a.b(style="background: #000")
 img(src="logo.png", alt="Logo")
 div(v-for="value in values", :key="value.key", @click="doSomething(value)")
+FooComponent(a, c, d, b, z)
