--- a/tests/options/sortAttributes/unformatted.pug
+++ b/tests/options/sortAttributes/unformatted.pug
@@ -1,3 +1,4 @@
 span(style="background: #000", class="a b")
 img(alt="Logo", src="logo.png")
 div(v-for="value in values", @click="doSomething(value)", :key="value.key")
+FooComponent(a c d b z)
