Use fuzzy-matching for prettier-ignore comments

--- a/tests/prettier-ignore/formatted.pug
+++ b/tests/prettier-ignore/formatted.pug
@@ -11,7 +11,7 @@ div
     :attribute2="bar",
     attribute3="something too long to keep on one line"
   )
-  //- prettier-ignore
+  //- prettier-ignore (because reasons)
   div
     .wrapper-4(attributes1="foo" :attribute2="bar"  attribute3   =   "something too long to keep on one line")
 .wrapper-5(
