--- a/tests/prettier-ignore/unformatted.pug
+++ b/tests/prettier-ignore/unformatted.pug
@@ -3,7 +3,7 @@ div
   //- prettier-ignore
   .wrapper-2(attributes1="foo" :attribute2="bar"  attribute3   =   "something too long to keep on one line")
   .wrapper-3(attributes1="foo" :attribute2="bar"  attribute3   =   "something too long to keep on one line")
-  //- prettier-ignore
+  //- prettier-ignore (because reasons)
   div
     .wrapper-4(attributes1="foo" :attribute2="bar"  attribute3   =   "something too long to keep on one line")
 .wrapper-5(attributes1="foo" :attribute2="bar"  attribute3   =   "something too long to keep on one line")
