Fix handling of literal attributes
Closes #130

--- a/tests/options/pugWrapAttributesThreshold/0/formatted.pug
+++ b/tests/options/pugWrapAttributesThreshold/0/formatted.pug
@@ -1,3 +1,15 @@
+#id(
+  attribute="value"
+)
+.class(
+  attribute="value"
+)
+#id.class(
+  attribute="value"
+)
+#id.class(
+  attribute="value"
+)
 button(
   type="button"
 )
