--- a/tests/options/pugWrapAttributesThreshold/1/unformatted.pug
+++ b/tests/options/pugWrapAttributesThreshold/1/unformatted.pug
@@ -1,3 +1,7 @@
+div(id="id" attribute="value")
+div(class="class" attribute="value")
+div(id="id" class="class" attribute="value")
+div(class="class" id="id" attribute="value")
 button(type="button")
 button(type="submit", (click)="play()")
 hello-framework([name]="name", [version]="version", (release)="onVersionRelease()")
