--- a/tests/options/pugWrapAttributesThreshold/default/formatted.pug
+++ b/tests/options/pugWrapAttributesThreshold/default/formatted.pug
@@ -1,3 +1,7 @@
+#id(attribute="value")
+.class(attribute="value")
+#id.class(attribute="value")
+#id.class(attribute="value")
 button(type="button")
 button(type="submit", (click)="play()")
 hello-framework(
