--- a/tests/plain-text/unformatted.pug
+++ b/tests/plain-text/unformatted.pug
@@ -1,5 +1,15 @@
-span
+div
   | Click here:
   a(href="mailto:hi@gmail.com")
     | hi@gmail.com
   | to get in touch with us
+  div
+    | Click here:
+    a(href="mailto:hi@gmail.com")
+      | hi@gmail.com
+    | to get in touch with us
+    div
+      | Click here:
+      a(href="mailto:hi@gmail.com")
+        | hi@gmail.com
+      | to get in touch with us
