Format inline style

--- a/tests/issues/issue-158/formatted.pug
+++ b/tests/issues/issue-158/formatted.pug
@@ -4,3 +4,8 @@ script.
 script.
   if (usingPug) console.log('you are awesome');
   else console.log('use pug');
+
+style.
+  body {
+    padding: 50px;
+  }
