--- a/tests/issues/issue-162/unformatted.pug
+++ b/tests/issues/issue-162/unformatted.pug
@@ -1,1 +1,4 @@
+span(style="color:red")
+span(style="color:red;")
 span(style="color:red;background-color:yellow")
+span(style="color:red;background-color:yellow;")
