--- a/tests/issues/issue-162/unformatted.pug
+++ b/tests/issues/issue-162/unformatted.pug
@@ -2,3 +2,4 @@ span(style="color:red")
 span(style="color:red;")
 span(style="color:red;background-color:yellow")
 span(style="color:red;background-color:yellow;")
+span(style="color:red;background-color:yellow;font-size:12px;font-weight:400;line-height:20px;")
