--- a/tests/issues/issue-171/formatted.pug
+++ b/tests/issues/issue-171/formatted.pug
@@ -4,3 +4,18 @@ style.
 
   .b {
   }
+
+  .c {
+  }
+
+  .d {
+  }
+
+script.
+  const a = 1;
+
+  const b = 1;
+
+  const c = 1;
+
+  const d = 1;
