--- a/tests/issues/issue-182/unformatted.pug
+++ b/tests/issues/issue-182/unformatted.pug
@@ -1,2 +1,7 @@
 span Text
   br/ more text
+
+div
+  span Text
+    br/ more text with very long text text text text text text text text text text
+    br/ and even more text text text text text text text text text text text text
