--- a/tests/issues/issue-182/unformatted.pug
+++ b/tests/issues/issue-182/unformatted.pug
@@ -5,3 +5,12 @@ div
   span Text
     br/ more text with very long text text text text text text text text text text
     br/ and even more text text text text text text text text text text text text
+
+span Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+  | Laudantium laborum quod harum fuga ipsum est voluptates assumenda commodi,
+  br/ nihil dolores recusandae nobis labore
+  | minus nostrum cumque eum sit similique!
+  br/
+  br/ Molestiae! Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+  br/
+  | Laudantium laborum quod harum fuga ipsum.
