--- a/tests/interpolations/formatted_vue.pug
+++ b/tests/interpolations/formatted_vue.pug
@@ -1,6 +1,9 @@
-//- Angular / Vue
+//- Vue
 p {{ test }}
 p {{ test }} {{ test2 }}
+p {{ new Date().toISOString() }}
+p {{ Date.now() }}
+p {{ $moment(justificative.createdAt).format('DD/MM/YYYY HH:mm:ss') }}
 
 //- No interpolation
 p {{ test
@@ -8,10 +11,7 @@ p {{ test }} {{
 p {{ test some text
 p {{ test }} {{ some text
 
-//- Angular
 p {{ title }}
-div
-  img(src="{{ itemImageUrl }}")
 
 foo(title="{{ 'something' | translate }} - {{ 'something else' | translate }}")
 
@@ -19,11 +19,5 @@ foo(title="{{ 'something' | translate }} - {{ 'something else' | translate }}")
 p The sum of 1 + 1 is not {{ 1 + 1 + getVal() }}.
 
 h4 {{ recommended }}
-img([src]="itemImageUrl2")
 
-button((click)="onSave($event)") Save
-button(*ngfor="let hero of heroes", (click)="deleteHero(hero)") {{ hero.name }}
-form(#heroform="", (ngsubmit)="onSubmit(heroForm)") ...
-
-//- Vue
 button(@click.native="x = true")
