add pugClassNotation: 'attribute' option

--- a/tests/options/pugClassNotation/formatted-literal.pug
+++ b/tests/options/pugClassNotation/formatted-literal.pug
@@ -1,7 +1,13 @@
-input.bar.foo
-input.bar.foo(
+input.bar.baz.foo
+input.bar.baz.foo(
   readonly,
   name="test-input",
   type="password",
   value="Hello World"
 )
+.foo bar
+.foo(bar="baz") Hello World
+.foo
+  .bar baz
+.baz
+.bar foo
