--- a/tests/options/pugClassNotation/unformatted.pug
+++ b/tests/options/pugClassNotation/unformatted.pug
@@ -1,8 +1,14 @@
-input.bar(class="foo")
-input.bar(
+input.bar.baz(class="foo")
+input.bar.baz(
   readonly,
   class="foo",
   name="test-input",
   type="password",
   value="Hello World"
 )
+.foo bar
+.foo(bar="baz") Hello World
+.foo
+  div(class="bar") baz
+.baz
+.bar foo
