--- a/tests/issues/issue-244/formatted.pug
+++ b/tests/issues/issue-244/formatted.pug
@@ -12,3 +12,9 @@ html
 
   body
     div Hello World
+
+    //- Should not take type attribute from wrong tag
+    div(type="application/json")
+    script.
+      const notJson = true;
+
