--- a/tests/issues/issue-244/unformatted.pug
+++ b/tests/issues/issue-244/unformatted.pug
@@ -12,3 +12,8 @@ html
 
 	body
 		div Hello World
+
+		//- Should not take type attribute from wrong tag
+		div(type='application/json')
+		script.
+			const notJson = true;
