--- a/tests/issues/issue-250/formatted.pug
+++ b/tests/issues/issue-250/formatted.pug
@@ -1,7 +1,9 @@
+- const circleSize = 72;
+- const circleWidth = 7;
 div
   v-progress-circular(
     :color="getProgressColor(currentCapacity)",
-    :size="circleSize",
+    :size=circleSize,
     :value="capacityPercentage",
-    :width="circleWidth"
+    :width=circleWidth
   ) {{ currentCapacity }}/{{ maxCapacity }}
