Reinforce test cases using backtick quotes

--- a/tests/issues/issue-61/formatted.pug
+++ b/tests/issues/issue-61/formatted.pug
@@ -11,3 +11,8 @@ div
           a(
             [href]='Nav.currentProject().repo(getRepository(pipeline).slug).buildNoContext()'
           )
+          - const interpolation = "code"
+          //- Vue
+          a(:href=`interpolated-${interpolation}`)
+          //- Angular
+          a([href]=`interpolated-${interpolation}`)
