--- a/tests/issues/issue-61/unformatted.pug
+++ b/tests/issues/issue-61/unformatted.pug
@@ -7,3 +7,8 @@ div
           a(:href=`Nav.currentProject().repo(getRepository(pipeline).slug).buildNoContext()`)
           //- Angular
           a([href]=`Nav.currentProject().repo(getRepository(pipeline).slug).buildNoContext()`)
+          - const interpolation = 'code'
+          //- Vue
+          a(:href=`interpolated-${interpolation}`)
+          //- Angular
+          a([href]=`interpolated-${interpolation}`)
