--- a/tests/issues/issue-80/formatted.pug
+++ b/tests/issues/issue-80/formatted.pug
@@ -17,3 +17,8 @@ div
   span.aui-lozenge(
     :class='[isActive ? "some-class-name" : "some-other-class-name"]'
   )
+
+  - const interpolation = "some-class-name"
+  span.aui-lozenge(
+    :class=`[ isActive ? ${interpolation} : "some-other-class-name" ]`
+  )
