Use pugTabWidth for calculating line length

--- a/tests/issues/issue-268/formatted.pug
+++ b/tests/issues/issue-268/formatted.pug
@@ -21,9 +21,19 @@ html
 				form(name="contact", method="POST")
 					.row.gtr-uniform
 						.col-6.col-12-x-small
-							input#name(type="text", name="name", placeholder="Name *", required)
+							input#name(
+								type="text",
+								name="name",
+								placeholder="Name *",
+								required
+							)
 						.col-6.col-12-x-small
-							input#email(type="email", name="email", placeholder="Email *", required)
+							input#email(
+								type="email",
+								name="email",
+								placeholder="Email *",
+								required
+							)
 						.col-12
 							input#subject(
 								type="text",
