Make code interpolation use singleQuote when possible

--- a/tests/attributes/boolean-attributes/formatted.pug
+++ b/tests/attributes/boolean-attributes/formatted.pug
@@ -10,4 +10,4 @@ input(type="checkbox", checked=false)
 input(type="checkbox", checked=true.toString())
 |
 |
-input(type="checkbox", checked=true && 'checked')
+input(type="checkbox", checked=true && "checked")
