--- a/tests/issues/issue-158/formatted.pug
+++ b/tests/issues/issue-158/formatted.pug
@@ -2,8 +2,8 @@ script.
   const x = 2; // comment
 
 script.
-  if (usingPug) console.log('you are awesome');
-  else console.log('use pug');
+  if (usingPug) console.log("you are awesome");
+  else console.log("use pug");
 
 style.
   body {
