--- a/tests/issues/issue-52/formatted.pug
+++ b/tests/issues/issue-52/formatted.pug
@@ -1,4 +1,4 @@
-- const variableWithHtmlString = '<span></span>';
+- const variableWithHtmlString = "<span></span>";
 div
   | !{ variableWithHtmlString }
 
