--- a/tests/issues/issue-61/formatted.pug
+++ b/tests/issues/issue-61/formatted.pug
@@ -11,7 +11,7 @@ div
           a(
             [href]='Nav.currentProject().repo(getRepository(pipeline).slug).buildNoContext()'
           )
-          - const interpolation = "code"
+          - const interpolation = 'code'
           //- Vue
           a(:href=`interpolated-${interpolation}`)
           //- Angular
