--- a/tests/issues/issue-80/formatted.pug
+++ b/tests/issues/issue-80/formatted.pug
@@ -18,7 +18,7 @@ div
     :class='[isActive ? "some-class-name" : "some-other-class-name"]'
   )
 
-  - const interpolation = "some-class-name"
+  - const interpolation = 'some-class-name'
   span.aui-lozenge(
     :class=`[ isActive ? ${interpolation} : "some-other-class-name" ]`
   )
