--- a/tests/issues/issue-85/formatted.pug
+++ b/tests/issues/issue-85/formatted.pug
@@ -1,10 +1,10 @@
 div= ``
   div= ``
 
-div= ''
-  div= ''
+div= ""
+  div= ""
 
-- var value = '';
+- var value = "";
 
 div= value + ``
-  div= '' + ``
+  div= "" + ``
