--- a/tests/options/pugClassNotation/formatted-attribute.pug
+++ b/tests/options/pugClassNotation/formatted-attribute.pug
@@ -6,5 +6,5 @@ div(class="foo")
   div(class="bar") baz
 div(class="baz")
 div(class="bar") foo
-- var code = 'ma-2 px-1';
+- var code = "ma-2 px-1";
 div(class=code)
