--- a/tests/pug-tests/case.formatted.pug
+++ b/tests/pug-tests/case.formatted.pug
@@ -13,7 +13,7 @@ html
       default
         p you have #{ friends } friends
 
-    - var friend = 'Tim:G';
+    - var friend = "Tim:G";
     case friend
       when 'Tim:G': p Friend is a string
       when {tim: 'g'}: p Friend is an object
