--- a/tests/pug-tests/code.iteration.formatted.pug
+++ b/tests/pug-tests/code.iteration.formatted.pug
@@ -9,7 +9,7 @@ ul
 
 ul
   each item, i in items
-    li(class='item-' + i)= item
+    li(class="item-" + i)= item
 
 ul
   each item, i in items
@@ -20,7 +20,7 @@ ul
     li= $item
 
 - var nums = [1, 2, 3];
-- var letters = ['a', 'b', 'c'];
+- var letters = ["a", "b", "c"];
 
 ul
   each l in letters
