--- a/tests/pug-tests/each.else.formatted.pug
+++ b/tests/pug-tests/each.else.formatted.pug
@@ -6,7 +6,7 @@ ul
   else
     li no users!
 
-- var users = [{ name: 'tobi', friends: ['loki'] }, { name: 'loki' }];
+- var users = [{ name: "tobi", friends: ["loki"] }, { name: "loki" }];
 
 if users
   ul
@@ -15,7 +15,7 @@ if users
     else
       li no users!
 
-- var user = { name: 'tobi', age: 10 };
+- var user = { name: "tobi", age: 10 };
 
 ul
   each val, key in user
@@ -32,7 +32,7 @@ ul
     li user has no details!
 
 - var user = Object.create(null);
-- user.name = 'tobi';
+- user.name = "tobi";
 
 ul
   each val, key in user
