--- a/tests/pug-tests/mixins.formatted.pug
+++ b/tests/pug-tests/mixins.formatted.pug
@@ -24,7 +24,7 @@ body
   +list
 
 mixin foobar(str)
-  #interpolation= str + 'interpolated'
+  #interpolation= str + "interpolated"
 
-- var suffix = 'bar';
+- var suffix = "bar";
 +#{'foo' + suffix}('This is ')
