--- a/tests/pug-tests/regression.784.formatted.pug
+++ b/tests/pug-tests/regression.784.formatted.pug
@@ -1,2 +1,2 @@
-- var url = 'http://www.google.com';
-.url #{ url.replace('http://', '').replace(/^www\./, '') }
+- var url = "http://www.google.com";
+.url #{ url.replace("http://", "").replace(/^www\./, "") }
