--- a/tests/quotes/double-to-single/unformatted.pug
+++ b/tests/quotes/double-to-single/unformatted.pug
@@ -1,4 +1,6 @@
-div( id = "test",)
+- const test = "test"
+
+div( id = "test", class = boolean ? "grey--text" : "black--text")
 	div.a(
 		color="primary"
 	)
