--- a/tests/quotes/single-to-double/formatted.pug
+++ b/tests/quotes/single-to-double/formatted.pug
@@ -1,7 +1,9 @@
+- const test = "test";
+
 #test
   .a(color="primary")
 
-.grey--text {{ $t('my-language-key.title') }}
+.grey--text {{ $t("my-language-key.title") }}
   v-text-field(
     :label="$t('my-language-key')",
     type="text",
