--- a/tests/spaces/formatted.pug
+++ b/tests/spaces/formatted.pug
@@ -10,7 +10,7 @@ v-btn(
 )
   v-icon save
   |
-  | {{ $t('mylangkeys.crud.save') }}
+  | {{ $t("mylangkeys.crud.save") }}
 
 div
   span(v-if="condition")
