--- a/tests/attributes/class-attributes/formatted.pug
+++ b/tests/attributes/class-attributes/formatted.pug
@@ -1,19 +1,19 @@
 .abc
 .abc
 
-- var classes = ['foo', 'bar', 'baz']
+- var classes = ["foo", "bar", "baz"]
 a(class=classes)
 |
 |
 //- the class attribute may also be repeated to merge arrays
-a.bang(class=classes, class=['bing'])
+a.bang(class=classes, class=["bing"])
 |
 |
-- const currentUrl = '/about'
-a(class={ active: currentUrl === '/' }, href="/") Home
+- const currentUrl = "/about"
+a(class={ active: currentUrl === "/" }, href="/") Home
 |
 |
-a(class={ active: currentUrl === '/about' }, href="/about") About
+a(class={ active: currentUrl === "/about" }, href="/about") About
 
 a#id.class(href="index.html") Text
 a#id.class(href="index.html") Text
