--- a/tests/conditionals/formatted.pug
+++ b/tests/conditionals/formatted.pug
@@ -1,4 +1,4 @@
-- var user = { description: 'foo bar baz' };
+- var user = { description: "foo bar baz" };
 - var authorised = false;
 #user
   if user.description
