--- a/tests/interpolations/formatted_vue.pug
+++ b/tests/interpolations/formatted_vue.pug
@@ -3,7 +3,7 @@ p {{ test }}
 p {{ test }} {{ test2 }}
 p {{ new Date().toISOString() }}
 p {{ Date.now() }}
-p {{ $moment(justificative.createdAt).format('DD/MM/YYYY HH:mm:ss') }}
+p {{ $moment(justificative.createdAt).format("DD/MM/YYYY HH:mm:ss") }}
 
 //- No interpolation
 p {{ test
