--- a/tests/issues/issue-147/formatted.pug
+++ b/tests/issues/issue-147/formatted.pug
@@ -1,1 +1,1 @@
-span {{ $t(expanded ? 'panel_title_without_title' : 'panel_title', { index: index + 1, title }) }}
+span {{ $t(expanded ? "panel_title_without_title" : "panel_title", { index: index + 1, title }) }}
