--- a/tests/issues/issue-58/formatted.pug
+++ b/tests/issues/issue-58/formatted.pug
@@ -1,4 +1,4 @@
-- const variable = 'func';
+- const variable = "func";
 - collapsed = false;
 input(onClick='methodName("' + variable + '", this)')
-div(id=id, class='collapse' + (collapsed ? '' : ' show') + ' card-content')
+div(id=id, class="collapse" + (collapsed ? "" : " show") + " card-content")
