--- a/tests/literals/class-literals/formatted.pug
+++ b/tests/literals/class-literals/formatted.pug
@@ -28,9 +28,9 @@ div
   :but="withCode()",
   class="#ad"
 )
-- const classes = ['foo', 'bar', 'baz'];
+- const classes = ["foo", "bar", "baz"];
 a.bing.fizz(class=classes)
-a.bang.fizz.bib(class=classes, class=['bing'])
+a.bang.fizz.bib(class=classes, class=["bing"])
 
 v-text-field.search(
   :label="$t('search.label')",
