--- a/tests/pug-tests/attr-es2015.formatted.pug
+++ b/tests/pug-tests/attr-es2015.formatted.pug
@@ -1,4 +1,4 @@
-- var avatar = '219b77f9d21de75e81851b6b886057c7';
+- var avatar = "219b77f9d21de75e81851b6b886057c7";
 
 .avatar-div(
   style=`background-image: url(https://www.gravatar.com/avatar/${avatar})`
