--- a/tests/pug-tests/mixin.attrs.formatted.pug
+++ b/tests/pug-tests/mixin.attrs.formatted.pug
@@ -26,13 +26,13 @@ body
     p Last content.
   +bottom#Last.foo.bar(name="end", data-attr="baz")
     p Some final words.
-  +bottom(class=['class1', 'class2'])
+  +bottom(class=["class1", "class2"])
 
 mixin foo
   .thing(attr1="foo", attr2="bar")&attributes(attributes)
 
-- var val = '<biz>';
-- var classes = ['foo', 'bar'];
+- var val = "<biz>";
+- var classes = ["foo", "bar"];
 +foo.thunk(attr3="baz", data-foo=val, data-bar!=val, class=classes)
 
 //- Regression test for #1424
