--- a/tests/pug-tests/regression.784.pug
+++ b/tests/pug-tests/regression.784.pug
@@ -1,2 +1,2 @@
 - var url = 'http://www.google.com'
-.url #{url.replace('http://', '').replace(/^www\./, '')}
+.url #{url.replace("http://", "").replace(/^www\./, "")}
