fix: missing class

--- a/tests/options/pugClassLocation/formatted-after.pug
+++ b/tests/options/pugClassLocation/formatted-after.pug
@@ -1,5 +1,5 @@
-div(type="button", class=boolean ? "test" : "fact").before-class.class= "type"
-  div(type="button", class=boolean ? "test" : "fact").class-before.class.class-before.after-class= "type"
+div(type="button", class=boolean ? "test" : "fact").before-class.class.class-before= "type"
+  div(type="button", class=boolean ? "test" : "fact").class.class-before.after-class= "type"
   div(type="button").test.place= "type"
 
 #types(type="button").test.place= "type"
