--- a/tests/issues/issue-317/formatted.pug
+++ b/tests/issues/issue-317/formatted.pug
@@ -8,6 +8,13 @@ v-row(no-gutters)
       v-text="`$\\{${variable}}`",
       @click="copyToClipboard(variable)"
     ).text-body-2.d-inline.mr-4
+      div(
+        v-t="'entity-management.entity-group.crud.entity-types-txt'"
+      ).text-body-2.text--secondary.mb-2.mt-4.class--1519
+
+div(
+  v-t="'type.place.property'"
+).class-1.class-2.class-3.class-4.class-5.class-6.class-7.get-to-121.class-10.class-50.sm
 
 div(role="document").modal-dialog.modal-lg
   .modal-content
