test: add tests

--- a/tests/options/pugClassLocation/formatted-after.pug
+++ b/tests/options/pugClassLocation/formatted-after.pug
@@ -19,3 +19,5 @@ input(
   value="Hello World",
   atrr="more attrs"
 ).bar.baz.foo
+
+p.text-center.mb-0: small: a(href=url).text-black-50= t("text")
