--- a/tests/options/pugClassLocation/formatted-before.pug
+++ b/tests/options/pugClassLocation/formatted-before.pug
@@ -19,3 +19,5 @@ input.bar.baz.foo(
   value="Hello World",
   atrr="more attrs"
 )
+
+p.text-center.mb-0: small: a.text-black-50(href=url)= t("text")
