--- a/tests/options/pugClassLocation/unformatted.pug
+++ b/tests/options/pugClassLocation/unformatted.pug
@@ -13,3 +13,5 @@ input.bar.baz(
 ).foo
 
 input.bar.baz.foo( readonly, name="test-input", type="password", value="Hello World", atrr="more attrs")
+
+p.text-center.mb-0: small: a.text-black-50(href=url)= t("text")
