Add_Support_for_Frontmatter: Add more testcontents

--- a/tests/frontmatter/formatted.pug
+++ b/tests/frontmatter/formatted.pug
@@ -1,4 +1,13 @@
 ---
 name: YAML test
 ---
-#aap
+doctype
+html
+  head
+    title This is a !{ name }!
+
+  body
+    h1 Hello world!
+    h2= name
+
+    #example
