--- a/tests/frontmatter/unformatted.pug
+++ b/tests/frontmatter/unformatted.pug
@@ -1,4 +1,13 @@
 ---
 name: YAML test
 ---
-div( id='aap' )
+doctype
+html
+  head
+    title This is a !{name}!
+
+  body
+    h1 Hello world!
+    h2= name
+
+    div( id='example' )
