--- a/tests/frontmatter/unformatted.pug
+++ b/tests/frontmatter/unformatted.pug
@@ -1,5 +1,19 @@
 ---
 name: YAML test
+tags:
+- this
+- squence
+- should
+- be
+- indented
+lets:
+  have:
+    us:
+      some: nesting
+      and: some more
+    flow style not supported:
+      {key: value, bar: baz}
+    not even arrays: [1,2,3,4,5]
 ---
 doctype
 html
