--- a/tests/issues/issue-417/formatted.pug
+++ b/tests/issues/issue-417/formatted.pug
@@ -1,6 +1,6 @@
 p Aliquam pulvinar enim eu enim finibus euismod.
   |
-  | a(href="https://example.com") Link
+  a(href="https://example.com") Link
   |
   | Suspendisse suscipit nunc non mauris sodales elementum.
 
@@ -8,6 +8,6 @@ div
   p Aliquam pulvinar enim eu enim finibus euismod.
   p Aliquam pulvinar enim eu enim finibus euismod.
     |
-    | a(href="https://example.com") Link
+    a(href="https://example.com") Link
     |
     | Suspendisse suscipit nunc non mauris sodales elementum.
