enhance test case
Co-authored-by: ST-DDT <ST-DDT@gmx.de>

--- a/tests/issues/issue-447/formatted.pug
+++ b/tests/issues/issue-447/formatted.pug
@@ -5,6 +5,9 @@ li #[b #{ key }:] #[i= value]
 li #[b #{ key }: ]#{ value }
 li #[b #{ key }: ]#[i= value]
 
+li #[b #{ key } :]#{ value }
+li #[b #{ key } :]#[i= value]
+
 div
   li #[b #{ key }:] #{ value }
   li #{ key } #{ value }
@@ -12,3 +15,6 @@ div
 
   li #[b #{ key }: ]#{ value }
   li #[b #{ key }: ]#[i= value]
+
+  li #[b #{ key } :]#{ value }
+  li #[b #{ key } :]#[i= value]
