--- a/docs/.vitepress/theme/styles/vars.css
+++ b/docs/.vitepress/theme/styles/vars.css
@@ -9,8 +9,10 @@
 
 :root {
   --vp-c-brand: #56332b;
+  --vp-c-brand-1: #56332b;
   --vp-c-brand-light: #ccac8d;
   --vp-c-brand-lighter: #efcca3;
+  --vp-c-brand-lightest: #efcca3;
   --vp-c-brand-dark: #56332b;
   --vp-c-brand-darker: #442823;
   --vp-c-brand-dimm: rgba(100, 108, 255, 0.08);
@@ -21,14 +23,14 @@
  * -------------------------------------------------------------------------- */
 
 :root {
-  --vp-button-brand-border: var(--vp-c-brand);
-  --vp-button-brand-text: var(--vp-c-text-dark-1);
-  --vp-button-brand-bg: var(--vp-c-brand-darker);
-  --vp-button-brand-hover-border: var(--vp-c-brand-dark);
-  --vp-button-brand-hover-text: var(--vp-c-text-dark-1);
-  --vp-button-brand-hover-bg: var(--vp-c-brand-dark);
+  --vp-button-brand-border: var(--vp-c-brand-light);
+  --vp-button-brand-text: var(--vp-c-white);
+  --vp-button-brand-bg: var(--vp-c-brand);
+  --vp-button-brand-hover-border: var(--vp-c-brand-light);
+  --vp-button-brand-hover-text: var(--vp-c-white);
+  --vp-button-brand-hover-bg: var(--vp-c-brand-light);
   --vp-button-brand-active-border: var(--vp-c-brand-light);
-  --vp-button-brand-active-text: var(--vp-c-text-dark-1);
+  --vp-button-brand-active-text: var(--vp-c-white);
   --vp-button-brand-active-bg: var(--vp-button-brand-bg);
 }
 
@@ -75,21 +77,39 @@
 }
 
 .dark {
+  --vp-c-brand-1: #ccac8d;
   --vp-custom-block-tip-border: var(--vp-c-brand);
-  --vp-custom-block-tip-text: var(--vp-c-brand-lighter);
+  --vp-custom-block-tip-text: var(--vp-c-brand-lightest);
   --vp-custom-block-tip-bg: var(--vp-c-brand-dimm);
 }
 
+/**
+ * VitePress: Custom fix
+ * -------------------------------------------------------------------------- */
+
+/*
+  Use lighter colors for links in dark mode for a11y.
+  Also specify some classes twice to have higher specificity
+  over scoped class data attribute.
+*/
 .dark .vp-doc a,
-.dark .edit-link-button,
-.dark .title,
-.dark .link.active,
-.dark .link.active .link-text,
-.dark .VPNavBarMenuLink.active {
-  color: var(--vp-c-brand-light);
+.dark .vp-doc a > code,
+.dark .VPNavBarMenuLink.VPNavBarMenuLink:hover,
+.dark .VPNavBarMenuLink.VPNavBarMenuLink.active,
+.dark .link.link:hover,
+.dark .link.link.active,
+.dark .edit-link-button.edit-link-button,
+.dark .pager-link .title {
+  color: var(--vp-c-brand-lighter);
 }
 
-.dark .link:hover,
-.dark .VPNavBarMenuLink:hover {
-  color: var(--vp-c-brand-lighter);
+.dark .vp-doc a:hover,
+.dark .vp-doc a > code:hover {
+  color: var(--vp-c-brand-lightest);
+  opacity: 1;
+}
+
+/* Transition by color instead of opacity */
+.dark .vp-doc .custom-block a {
+  transition: color 0.25s;
 }
