--- a/tests/options/pugClassNotation/formatted-attribute.pug
+++ b/tests/options/pugClassNotation/formatted-attribute.pug
@@ -8,3 +8,14 @@ div(class="baz")
 div(class="bar") foo
 - var code = "ma-2 px-1";
 div(class=code)
+div(class="foo")
+div(attribute="value", class="foo")
+div(attribute="value")
+div(attribute="value", class="bar foo")
+div(attribute="value", class="bar foo baz")
+div(attribute="value", class="bar foo baz")
+div(attribute="value", class="bar foo baz")
+div: span(class="foo")
+div: span(class="foo")
+div(class="foo"): span(class="bar baz foo")
+div(class="foo bar baz"): h1(class="foo bar baz") Let's really #[span(class="foo bar baz") get nasty]!
