More work on the tests.

--- a/tests/options/pugClassNotation/unformatted.pug
+++ b/tests/options/pugClassNotation/unformatted.pug
@@ -16,8 +16,8 @@ input.bar.baz(
 div(class=code)
 div.foo
 div(attribute="value").foo
-div(attribute="value" class="bar").foo
-div(attribute="value" class="bar").foo.baz
+div(class="bar", attribute="value").foo
+div(attribute="value", class="bar").foo.baz
 div(
   attribute="value"
   class="bar"
