More work on tests

--- a/tests/options/pugClassNotation/formatted-as-is.pug
+++ b/tests/options/pugClassNotation/formatted-as-is.pug
@@ -20,6 +20,7 @@ div.foo(class="bar", attribute="value")
 div.foo.baz(attribute="value", class="bar")
 div.foo.baz(attribute="value", class="bar")
 .foo.baz(attribute="value", class="bar")
+div.bar(class="foo"): span Text
 div: span.foo
 div: span(class="foo")
 .foo: span.bar.foo(class="baz")
