--- a/tests/options/pugClassNotation/formatted-attribute.pug
+++ b/tests/options/pugClassNotation/formatted-attribute.pug
@@ -10,11 +10,11 @@ div(class="bar") foo
 div(class=code)
 div(class="foo")
 div(attribute="value", class="foo")
-div(attribute="value")
 div(attribute="value", class="bar foo")
 div(attribute="value", class="bar foo baz")
 div(attribute="value", class="bar foo baz")
 div(attribute="value", class="bar foo baz")
+div(class="foo bar"): span Text
 div: span(class="foo")
 div: span(class="foo")
 div(class="foo"): span(class="bar baz foo")
