--- a/tests/options/pugClassNotation/formatted-literal.pug
+++ b/tests/options/pugClassNotation/formatted-literal.pug
@@ -19,6 +19,7 @@ div.foo(attribute="value")
 .bar.foo.baz(attribute="value")
 .bar.foo.baz(attribute="value")
 .foo.bar.baz(attribute="value")
+.foo.bar: span Text
 div: span.foo
 div: span.foo
 .foo: span.bar.baz.foo
