--- a/tests/options/pugClassNotation/unformatted.pug
+++ b/tests/options/pugClassNotation/unformatted.pug
@@ -23,6 +23,7 @@ div(
   class="bar"
 ).foo.baz
 div.foo(attribute="value" class="bar").baz
+div(class="foo").bar: span Text
 div: span.foo
 div: span(class="foo")
 div.foo: span.bar(class="baz").foo
